tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-tuple-return-field.wyst
module demo
fn pair() -> (widen: u64, other: u64) { return (1, 2) }
